opam-version: "2.0"

synopsis:    "A mutation tester for OCaml"
license:     "BSD-2-Clause"
homepage:    "https://github.com/jmid/mutaml"
doc:         "https://github.com/jmid/mutaml"
bug-reports: "https://github.com/jmid/mutaml/issues"

dev-repo:    "git+https://github.com/jmid/mutaml.git"
authors:     "Jan Midtgaard <mail@janmidtgaard.dk>"
maintainer:  "Jan Midtgaard <mail@janmidtgaard.dk>"
version:     "0.0.1"
tags: [
  "test"
  "mutation testing"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "subst"] {pinned}
]

depends: [
  "ocaml" { >= "4.12.0" & < "5.0.0" }
  "dune" { >= "2.9.0" & < "3.0.0" }
  "ppxlib" { >= "0.26.0" & < "0.28.0" }
  "ppx_yojson_conv" { >= "v0.14.0" }
  "conf-timeout"
  "ounit2" {with-test}
]

description: """
Mutaml is a mutation testing tool for OCaml.
It uses a ppxlib-based preprocessor to make a series of small
breaking changes to a program's source code and then runs
the program's testsuite for each of them to catch uncaught
misbehaviour.
"""
